fix select2 z-index

--- a/igloo/igloo-components/igloo-component-wicket-bootstrap4/src/main/java/org/iglooproject/wicket/bootstrap4/markup/html/template/css/bootstrap/select2/override/_select2-bootstrap.scss
+++ b/igloo/igloo-components/igloo-component-wicket-bootstrap4/src/main/java/org/iglooproject/wicket/bootstrap4/markup/html/template/css/bootstrap/select2/override/_select2-bootstrap.scss
@@ -1,3 +1,5 @@
+$s2bs-dropdown-zindex:									$zindex-select2;
+
 .select2-container--bootstrap {
 	&.select2-container--focus {
 		&:not(.select2-container--open) {
@@ -9,6 +11,10 @@
 				}
 			}
 		}
+	}
+	
+	.select2-dropdown {
+		z-index: $s2bs-dropdown-zindex;
 	}
 	
 	.select2-search--dropdown {
